traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: value unary_! is not a member of Unit
  while (!positionFinale()) {
         ^Snake:26: warning: enclosing method positionFinale has result type Unit: return value discarded
  return res
  ^